# oop

lab0/: CMakeLists.txt  main.cpp
lab1/: BitArray.cpp  BitArray.h  BitArray_test.cpp  CMakeLists.txt  main.cpp
